Enabling containerized unit tests with testcontainer.